--- a/istio/vs_stable.yaml
+++ b/istio/vs_stable.yaml
@@ -1,40 +1,106 @@
-apiVersion: networking.istio.io/v1beta1
+# apiVersion: networking.istio.io/v1beta1
+# kind: VirtualService
+# metadata:
+#   name: vs-rollouts
+#   namespace: dev
+#   labels:
+#     name: vs-rollouts
+#     type: virtualservice
+# spec:
+#   hosts:
+#     # - svc-rollouts.dev.svc.cluster.local
+#     # - vs-rollouts.local
+#     - "*"
+#   gateways:
+#     - rollouts-gateway
+#   http:
+#     - name: primary
+#       match:
+#         - uri:
+#             prefix: /
+#       route:
+#         - destination:
+#             host: svc-stable.dev.svc.cluster.local
+#             port:
+#               number: 80
+#             # subset: stable
+#           weight: 100
+#         - destination:
+#             host: svc-canary.dev.svc.cluster.local
+#             port:
+#               number: 80
+#             # subset: canary
+#           weight: 0
+# ---
+# apiVersion: networking.istio.io/v1beta1
+# kind: DestinationRule
+# metadata:
+#   name: dr-rollouts
+#   namespace: dev
+#   labels:
+#     name: dr-rollouts
+#     type: destinationrule
+# spec:
+#   host: svc-rollouts.dev.svc.cluster.local
+#   subsets:
+#     - name: stable
+#       labels:
+#         name: rollouts-dev
+#     - name: canary
+#       labels:
+#         name: rollouts-dev
+
+apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: vs-rollouts
+  name: rollouts-vs1
   namespace: dev
   labels:
-    name: vs-rollouts
+    name: rollouts-vs1
     type: virtualservice
 spec:
+  gateways:
+    - rollouts-gateway
   hosts:
-    - svc-rollouts.dev.svc.cluster.local
+    - rollouts-vs1.local
   http:
     - name: primary
       route:
         - destination:
-            host: svc-rollouts.dev.svc.cluster.local
-            subset: stable
+            host: rollouts-svc-stable
+            port:
+              number: 15372
           weight: 100
         - destination:
-            host: svc-rollouts.dev.svc.cluster.local
-            subset: canary
+            host: rollouts-svc-canary
+            port:
+              number: 15372
           weight: 0
+
 ---
-apiVersion: networking.istio.io/v1beta1
-kind: DestinationRule
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
 metadata:
-  name: dr-rollouts
+  name: rollouts-vs2
   namespace: dev
   labels:
-    name: dr-rollouts
-    type: destinationrule
+    name: rollouts-vs2
+    type: virtualservice
 spec:
-  host: svc-rollouts.dev.svc.cluster.local
-  subsets:
-    - name: stable
-      labels:
-        name: rollouts-dev
-    - name: canary
-      labels:
-        name: rollouts-dev
+  gateways:
+    - rollouts-gateway
+  hosts:
+    - rollouts-vs2.local
+  http:
+    - name: secondary
+      route:
+        - destination:
+            host: rollouts-svc-stable
+            port:
+              number: 15373
+          weight: 100
+        - destination:
+            host: rollouts-svc-canary
+            port:
+              number: 15373
+          weight: 0
