--- a/analysis/service.yaml
+++ b/analysis/service.yaml
@@ -1,10 +1,11 @@
+# Stable service
 apiVersion: v1
 kind: Service
 metadata:
   name: rollouts-svc-stable
   namespace: dev
   labels:
-    name: rollouts-svc-stable
+    app: rollouts-svc-stable
     type: service
 spec:
   ports:
@@ -13,15 +14,16 @@ spec:
       protocol: TCP
       name: http
   selector:
-    name: rollouts-dev
+    app: rollouts-dev
 ---
+# Canary service
 apiVersion: v1
 kind: Service
 metadata:
   name: rollouts-svc-canary
   namespace: dev
   labels:
-    name: rollouts-svc-canary
+    app: rollouts-svc-canary
     type: service
 spec:
   ports:
@@ -30,4 +32,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    name: rollouts-dev
+    app: rollouts-dev
