working gateway - hello_world

--- a/hello_world/gateway.yaml
+++ b/hello_world/gateway.yaml
@@ -1,7 +1,10 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: bookinfo-gateway
+  name: gateway-helloworld
+  namespace: dev
+  labels:
+    name: gateway-helloworld
 spec:
   # The selector matches the ingress gateway pod labels.
   # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
@@ -18,26 +21,21 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: bookinfo
+  name: vs-helloworld
+  namespace: dev
+  labels:
+    name: vs-helloworld
 spec:
   hosts:
     - "*"
   gateways:
-    - bookinfo-gateway
+    - gateway-helloworld
   http:
     - match:
         - uri:
-            exact: /productpage
-        - uri:
-            prefix: /static
-        - uri:
-            exact: /login
-        - uri:
-            exact: /logout
-        - uri:
-            prefix: /api/v1/products
+            prefix: /
       route:
         - destination:
-            host: productpage
+            host: svc-helloworld.dev.svc.cluster.local
             port:
-              number: 9080
+              number: 8080
