--- a/hello_world/service.yml
+++ b/hello_world/service.yml
@@ -6,11 +6,11 @@ metadata:
   labels:
     name: svc-helloworld
 spec:
-  type: NodePort
+  # type: NodePort
   selector:
     app: pod-helloworld
   ports:
     - port: 8080
       targetPort: 8080
       protocol: TCP
-      nodePort: 30000
+      # nodePort: 30000
