--- a/analysis/gateway.yaml
+++ b/analysis/gateway.yaml
@@ -4,14 +4,16 @@ metadata:
   name: rollouts-gateway
   namespace: dev
   labels:
-    app: rollouts-gateway
+    name: rollouts-gateway
     type: gateway
 spec:
+  # The selector matches the ingress gateway pod labels.
+  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
   selector:
-    istio: ingressgateway # istio default controller
+    istio: ingressgateway # use istio default controller
   servers:
     - port:
-        number: 80
+        number: 8080
         name: http
         protocol: HTTP
       hosts:
