--- a/analysis/vs_stable.yaml
+++ b/analysis/vs_stable.yaml
@@ -4,23 +4,26 @@ metadata:
   name: rollouts-vs
   namespace: dev
   labels:
-    app: rollouts-vs
+    name: rollouts-vs
     type: virtualservice
 spec:
   gateways:
     - rollouts-gateway
   hosts:
-    - rollouts-vs.local
+    - "*"
   http:
     - name: primary
+      match:
+        - uri:
+            prefix: /
       route:
         - destination:
-            host: rollouts-svc-stable
+            host: rollouts-svc-stable.dev.svc.cluster.local
             port:
-              number: 15372
+              number: 8080
           weight: 100
         - destination:
-            host: rollouts-svc-canary
+            host: rollouts-svc-canary.dev.svc.cluster.local
             port:
-              number: 15372
+              number: 8080
           weight: 0
