--- a/istio_basic/gateway.yaml
+++ b/istio_basic/gateway.yaml
@@ -7,11 +7,13 @@ metadata:
     name: rollouts-gateway
     type: gateway
 spec:
+  # The selector matches the ingress gateway pod labels.
+  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
   selector:
-    istio: ingressgateway # istio default controller
+    istio: ingressgateway # use istio default controller
   servers:
     - port:
-        number: 80
+        number: 8080
         name: http
         protocol: HTTP
       hosts:
