--- a/kind/kind.yaml
+++ b/kind/kind.yaml
@@ -15,3 +15,6 @@ nodes:
       - containerPort: 443
         hostPort: 443
         protocol: TCP
+      - containerPort: 3000
+        hostPort: 3000
+        protocol: TCP
