updated analysistemplate service name

--- a/analysis/analysistemplate.yaml
+++ b/analysis/analysistemplate.yaml
@@ -8,7 +8,7 @@ metadata:
     type: analysistemplate
 spec:
   args:
-    - name: service-name
+    - name: canary-service
   metrics:
     - name: success-rate
       interval: 5m
@@ -19,8 +19,8 @@ spec:
           address: http://prometheus.istio-system.svc.cluster.local:9090
           query: |
             sum(irate(
-              istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}",response_code!~"5.*"}[5m]
+              istio_requests_total{reporter="source",destination_service=~"{{args.canary-service}}",response_code!~"5.*"}[5m]
             )) /
             sum(irate(
-              istio_requests_total{reporter="source",destination_service=~"{{args.service-name}}"}[5m]
+              istio_requests_total{reporter="source",destination_service=~"{{args.canary-service}}"}[5m]
             ))
