--- a/experiment/basic/rollout.yaml
+++ b/experiment/basic/rollout.yaml
@@ -7,8 +7,8 @@ metadata:
     name: rollouts-dev
     type: rollout
 spec:
-  replicas: 1
-  revisionHistoryLimit: 3
+  replicas: 2
+  revisionHistoryLimit: 2
   selector:
     matchLabels:
       name: rollouts-dev
@@ -18,13 +18,11 @@ spec:
         annotations:
           rollout: canary
         labels:
-          name: rollouts-dev
           rollout: canary
       stableMetadata:
         annotations:
           rollout: stable
         labels:
-          name: rollouts-dev
           rollout: stable
       canaryService: rollouts-svc-canary
       stableService: rollouts-svc-stable
@@ -37,11 +35,17 @@ spec:
       steps:
         - setWeight: 20
         - pause: { duration: 10s }
-        - setWeight: 40
-        - pause: { duration: 10s }
+        - experiment:
+            duration: 40s
+            templates:
+              - name: canary
+                specRef: canary
+            analyses:
+              - name: success-rate
+                templateName: webmetric
         - setWeight: 50
-        # - pause: { duration: 10s }
-        - pause: {}
+        - pause: { duration: 10s }
+        # - pause: {}
   template:
     metadata:
       labels:
