updated headers for tests

--- a/webmetrics/analysistemplate.yaml
+++ b/webmetrics/analysistemplate.yaml
@@ -18,3 +18,5 @@ spec:
           headers:
             - key: header-version
               value: v1
+            - key: Content-Type
+              value: "application/json"
